Fixed a few bugs v1.0.0!!!
- drag over row, drag out over all row bug fixed.
- fixed scrollbars appearane
- bumped to v1.0.0

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -210,7 +210,8 @@ input[type='radio'] {
 		}
 
 		&:focus {
-			border-color: #751A3B;
+			border-color: #821F43;
+    		background-color: #A72756;
 		}
 
 		&:active {
@@ -297,7 +298,6 @@ input[type='radio'] {
 
 
 .main {
-	
 }
 
 
@@ -367,6 +367,7 @@ input[type='radio'] {
 
 	.ps-scrollbar-y-rail {
 		background: #213B46 !important;
+		right: 9px;
 	}
 
 	.ps-scrollbar-y {
@@ -381,6 +382,10 @@ input[type='radio'] {
 	.tier-list {
 		padding-top: 10px;
 		padding-bottom: 10px;
+	}
+
+	.ps-scrollbar-y-rail {
+		right: 3px;
 	}
 }
 
@@ -597,6 +602,10 @@ body.collapse {
 		bRowColor = #B07D45;
 		cRowColor = #983E61;
 		newRowColor = #E27674;
+
+		.god-icons.over {
+			opacity: 0.8;
+		}
 
 		.ss-row {
 			background-color: sPlusRowColor;
